--- a/HomePage.html
+++ b/HomePage.html
@@ -14,6 +14,7 @@
 </div>
 
 <div class="topnav">
+	<a href="index.html"></a>
 	<a href="HomePage.html">Home</a>
 	<div class="dropdown">
 		<button class="dropbtn">Topics
