--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<href="alifelongwork.github.io/HomePage.html>
+<!DOCTYPE html> 
+<html>
+
+<head>
+<link rel="stylesheet" type="text/css" href="TestStyle.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+</head>
+
+<body>
+
+<div class="header">
+	<h1>Header</h1>
+	<p>Resize browser</p>
+</div>
+
+<div class="topnav">
+	<a href="index.html"></a>
+	<a href="HomePage.html">Home</a>
+	<div class="dropdown">
+		<button class="dropbtn">Topics
+			<i class="fa fa-caret-down"></i>
+		</button>
+		<div class="dropdown-content">
+			<a href="Topics/Astronomy/AstronomyPage.html">Astronomy</a>
+			<a href="Topics/Quantum/QuantumPage.html">Quantum</a>
+			<a href="Topics/Philosophy/PhilosophyPage.html">Philosophy</a>
+		</div>
+	</div>
+	<a href="AboutPage.html">About</a>
+	<a href="#">Useful Links</a>
+</div>
+
+<h1>Welcome</h1>
+<p>
+Greetings
+
+<h2>Bio</h2>
+<p>
+My name is Austin Long and this is my mind. The soul purpose of this website is to archive information relevant to understanding the fundamental nature of the universe in which we live.
+</p>
+</p>
+
+<button>
+Next Page
+</button>
+
+<a href="https://github.com/alifelongwork" target="_blank">Link to github</a>
+
+</body>
+</html>
+
