--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Greetings
 
 <h2>Bio</h2>
 <p>
-My name is Austin Long and this is my mind. The soul purpose of this website is to archive information relevant to understanding the fundamental nature of the universe in which we live.
+My name is Austin Long
 </p>
 </p>
 
