--- a/Topics/Quantum/QuantumPage.html
+++ b/Topics/Quantum/QuantumPage.html
@@ -14,6 +14,7 @@
 		<div class="dropdown-content">
 			<a href="../Astronomy/AstronomyPage.html">Astronomy</a>
 			<a href="QuantumPage.html">Quantum</a>
+			<a href=""../Philosophy/PhilosophyPage.html">Philosophy</a>
 		</div>
 	</div>
 	<a href="AboutPage.html">About</a>
