--- a/pages/experience.html
+++ b/pages/experience.html
@@ -11,6 +11,7 @@ layout: page
     <li>Introductory Astronomy for general education</li>
     <li>Develop lessons that convey concepts in understandable and relatable methods</li>
   </ul>
+<h1> class="section-heading-spacer"></h1><br>
   <h2> Programming Instructor</h2>
   <ul> 
     <li><strong>2018 to 2020</strong></li>
