--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@ layout: page
 
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
-<img src="../assets/GIFS/Triangulation.gif>
+<img src="../assets/GIFS/Triangulation.gif">
 <img src="../assets/GIFS/BVH.gif">
-<img src="../assets/GIFS/Basic-Physics.gif>
-<img src="../assets/GIFS/Quad-Tree.gif>
+<img src="../assets/GIFS/Basic-Physics.gif">
+<img src="../assets/GIFS/Quad-Tree.gif">
