--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,12 @@ layout: page
 
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
+This text goes here
 <img src="../assets/GIFS/Triangulation.gif">
+With this gif
 <img src="../assets/GIFS/BVH.gif">
+inside here we see
 <img src="../assets/GIFS/Basic-Physics.gif">
+magic can happen
 <img src="../assets/GIFS/Quad-Tree.gif">
+where am I
