--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,12 +4,13 @@ layout: page
 
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
-This text goes here
+<p>This text goes here<br>
 <img src="../assets/GIFS/Triangulation.gif">
-With this gif
+With this gif<br>
 <img src="../assets/GIFS/BVH.gif">
-inside here we see
+inside here we see<br>
 <img src="../assets/GIFS/Basic-Physics.gif">
-magic can happen
+magic can happen<br>
 <img src="../assets/GIFS/Quad-Tree.gif">
-where am I
+where am I<br>
+</p>
