--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,12 +5,12 @@ layout: page
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
 <p>This text goes here<br>
-<img src="../assets/GIFS/Triangulation.gif">
+<img src="../assets/GIFS/Triangulation.gif"><br>
 With this gif<br>
-<img src="../assets/GIFS/BVH.gif">
+<img src="../assets/GIFS/BVH.gif"><br>
 inside here we see<br>
-<img src="../assets/GIFS/Basic-Physics.gif">
+<img src="../assets/GIFS/Basic-Physics.gif"><br>
 magic can happen<br>
-<img src="../assets/GIFS/Quad-Tree.gif">
+<img src="../assets/GIFS/Quad-Tree.gif"><br>
 where am I<br>
 </p>
