--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@ layout: page
 
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
-<p>This text goes here<br>
+<p>The overarching idea of this project was to develop a teachable physics based curriculum towards students interested in game design. The development of a simple physics engine involves incorporating physical concepts into a computer program that then responds based on either user input, external interactions with other objects, or both. After initially explaining concepts such as matrices, vectors, and linear transformations, it builds in to primitive hitbox and polygon creation and detection.<br>
 <img src="../assets/GIFS/Triangulation.gif"><br>
 With this gif<br>
 <img src="../assets/GIFS/BVH.gif"><br>
