--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,7 @@ layout: page
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
 <p>The overarching idea of this project was to develop a teachable, physics based, programming curriculum towards students interested in game design. The development of a simple physics engine involves incorporating physical concepts into a computer program that then responds based on either user input, external interactions with other objects, or both. After initially explaining concepts such as matrices, vectors, and linear transformations, it builds in to primitive hitbox and polygon creation and detection.<br>
-<h1 class="section-heading-spacer"></h1>
+<h1 class="section-heading-spacer"></h1><br>
 Below is an example of a process known as polygon triangulation. This will take any polygon shape and break it down into simple triangles. This is often used in texturing and in creating more accurate hitboxes that conform to the geometry of the object. Advanced engines use this idea to create billions of triangles along the edges of complex geometries to better represent hitbox and collision interactions.<br>
 <img src="../assets/GIFS/Triangulation.gif"><br>
 With this gif<br>
