--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,11 +4,11 @@ layout: page
 
 <h1>Projects</h1>
 <h2>Physics Engine</h2>
-<p>The overarching idea of this project was to develop a teachable, physics based, programming curriculum towards students interested in game design. The development of a simple physics engine involves incorporating physical concepts into a computer program that then responds based on either user input, external interactions with other objects, or both. After initially explaining concepts such as matrices, vectors, and linear transformations, it builds in to primitive hitbox and polygon creation and detection.<br>
+<p>The overarching idea of this project was to develop a teachable, physics based, programming curriculum towards students interested in game design. The development of a simple physics engine involves incorporating physical concepts into a computer program that then responds based on either user input, external interactions with other objects, or both. After initially explaining concepts such as matrices, vectors, and linear transformations, it builds in to primitive hitbox and polygon creation and detection.</p><br>
 <h1 class="section-heading-spacer"></h1><br>
-Below is an example of a process known as polygon triangulation. This will take any polygon shape and break it down into simple triangles. This is often used in texturing and in creating more accurate hitboxes that conform to the geometry of the object. Advanced engines use this idea to create billions of triangles along the edges of complex geometries to better represent hitbox and collision interactions.<br>
+<p>Below is an example of a process known as polygon triangulation. This will take any polygon shape and break it down into simple triangles. This is often used in texturing and in creating more accurate hitboxes that conform to the geometry of the object. Advanced engines use this idea to create billions of triangles along the edges of complex geometries to better represent hitbox and collision interactions.</p><br>
 <img src="../assets/GIFS/Triangulation.gif"><br>
-With this gif<br>
+<p>Data structures are implemented with hitboxes into what are known as Bounding Volume Hierarchies. An example is shown where the overall hitbox is the outer rectangle surrounding the entire person. As the mouse scrolls over various areas of the inside of the box intersecting parts of the figure, smaller and more refined hitboxes are displayed. This is to demonstrate the combination of tree data structures with hitboxes to give students an idea as to how to optimize object interaction.</p><br>
 <img src="../assets/GIFS/BVH.gif"><br>
 inside here we see<br>
 <img src="../assets/GIFS/Basic-Physics.gif"><br>
