--- a/pages/projects.html
+++ b/pages/projects.html
@@ -14,9 +14,9 @@ layout: page
 <img src="../assets/GIFS/Basic-Physics.gif"><br>
 <p>The last thing students will typically need to finalize their engine is the ability to manage multiple objects simultaneously. Here we used a quad tree data structure and grid like patterns to demonstrate object proximity. This demo allows us to increase or decrease the number of grid levels along with the number of objects on the screen. The more grid levels there are the smaller grids will appear as the objects move. This is useful when games have multiple moving objects that are all potentially able to be interacted with or involved in a collision with other objects or players and aids in tracking spatial movements.</p><br>
 <img src="../assets/GIFS/Quad-Tree.gif"><br>
-<h1 class="section-heading-spacer"></h1>
+<h1 class="section-heading-spacer"></h1><br>
 
-<b>Curriculum Development & Program Design by:</b>
+<b>Curriculum Development & Program Design by:</b><br>
   
 Austin Long<br>
 Ethan Pollack<br>
