--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,7 +16,7 @@ layout: page
 <img src="../assets/GIFS/Quad-Tree.gif"><br>
 <h1 class="section-heading-spacer"></h1><br>
 
-<b>Curriculum Development & Program Design by:</b><br>
+<p><b>Curriculum Development & Program Design by:</b></p><br>
   
 Austin Long<br>
 Ethan Pollack<br>
