--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,11 +9,11 @@ layout: page
 <p>Below is an example of a process known as polygon triangulation. This will take any polygon shape and break it down into simple triangles. This is often used in texturing and in creating more accurate hitboxes that conform to the geometry of the object. Advanced engines use this idea to create billions of triangles along the edges of complex geometries to better represent hitbox and collision interactions.</p><br>
 <img src="../assets/GIFS/Triangulation.gif" width="480"><br>
 <p>Data structures are implemented with hitboxes into what are known as Bounding Volume Hierarchies. An example is shown where the overall hitbox is the outer rectangle surrounding the entire person. As the mouse scrolls over various areas of the inside of the box intersecting parts of the figure, smaller and more refined hitboxes are displayed. This is to demonstrate the combination of tree data structures with hitboxes to give students an idea as to how to optimize object interaction.</p><br>
-<img src="../assets/GIFS/BVH.gif"><br>
+<img src="../assets/GIFS/BVH.gif" width="480"><br>
 <p>Combining physical concepts with hitboxes and user interaction, we create a basic physics demonstration. Here the mouse click triggers an event that causes the block to move along the line connected to the mouse pointer. The box does not follow a straight line due to projectile motion physics and will fall back to the ground under the force of gravity. This builds students in to simple platform game design that they can build up from the foundations of this engine.</p><br>
-<img src="../assets/GIFS/Basic-Physics.gif"><br>
+<img src="../assets/GIFS/Basic-Physics.gif" width="480"><br>
 <p>The last thing students will typically need to finalize their engine is the ability to manage multiple objects simultaneously. Here we used a quad tree data structure and grid like patterns to demonstrate object proximity. This demo allows us to increase or decrease the number of grid levels along with the number of objects on the screen. The more grid levels there are the smaller grids will appear as the objects move. This is useful when games have multiple moving objects that are all potentially able to be interacted with or involved in a collision with other objects or players and aids in tracking spatial movements.</p><br>
-<img src="../assets/GIFS/Quad-Tree.gif"><br>
+<img src="../assets/GIFS/Quad-Tree.gif" width="480"><br>
 <h1 class="section-heading-spacer"></h1><br>
 
 <p><b>Curriculum Development & Program Design by:</b></p><br>
