--- a/pages/about.html
+++ b/pages/about.html
@@ -9,4 +9,4 @@ layout: page
 
   <img src="../assets/images/neural-network.png">
   <img src="../assets/images/artificial-neural-network.png">
-  <img src="../assets/images/DNA_Structure+Key+Labelled.png">
+  <img src="../assets/images/DNA_Structure+Key+Labelled.png" width="480">
