--- a/pages/about.html
+++ b/pages/about.html
@@ -8,4 +8,4 @@ layout: page
   </p>
 
   <img src="../assets/images/artificial-neural-network.png">
-  <img src="../assets/images/DNA_Structure+Key+Labelled.png" width="480">
+  <img src="../assets/images/DNA_Structure+Key+Labelled.png" width="480" height="500">
