--- a/pages/publications.html
+++ b/pages/publications.html
@@ -3,4 +3,4 @@ layout: page
 ---
 
 <h1>Publications</h1>
-A. Long and J. Eloranta, "Density Functional theory of superfluid helium at finite temperature.", J. Chem. Phys. 155, 074102 (2021) <a href="https://aip.scitation.org/doi/10.1063/5.0060132"></a>
+A. Long and J. Eloranta, "Density Functional theory of superfluid helium at finite temperature.", J. Chem. Phys. 155, 074102 (2021) <a href="https://aip.scitation.org/doi/10.1063/5.0060132">Link to Paper</a>
