--- a/pages/projects.html
+++ b/pages/projects.html
@@ -16,7 +16,7 @@ The last thing students will typically need to finalize their engine is the abil
 <img src="../assets/GIFS/Quad-Tree.gif"><br>
 <h1 class="section-heading-spacer"></h1><br>
 
-<a href="https://github.com/alifelongwork/Physics-Engine">Source</a>
+<a href="https://github.com/alifelongwork/Physics-Engine">Source</a><br>
 
 <p><b>Curriculum Development & Program Design by:</b></p><br>
   
