--- a/pages/experience.html
+++ b/pages/experience.html
@@ -4,9 +4,17 @@ layout: page
 
 <h1> Experience</h1>
   <h1 class="section-heading-spacer"></h1><br>
+  <h2> Physics Professor</h2>
+  <ul>
+    <li><strong>Community College of Denver 2021 to Present</strong></li>
+    <li>Calculus based general mechanics & Electromagnetism</li>
+    <li>Develop lessons for both in class and online teaching</li>
+    <li>Record conceptual videos for supplemental lecture material to introduce and expand on concepts</li>
+  </ul>
+  <h1 class="section-heading-spacer"></h1><br>
   <h2> Physics & Astronomy Professor</h2>
   <ul>
-    <li><strong>2019 to 2021</strong></li>
+    <li><strong>CSU Northridge 2019 to 2021</strong></li>
     <li>Algebra & Calculus based general mechanics</li>
     <li>Introductory Astronomy for general education</li>
     <li>Develop lessons that convey concepts in understandable and relatable methods</li>
