--- a/pages/experience.html
+++ b/pages/experience.html
@@ -22,7 +22,7 @@ layout: page
 <h1 class="section-heading-spacer"></h1><br>
   <h2> Programming Instructor</h2>
   <ul> 
-    <li><strong>2018 to 2020</strong></li>
+    <li><strong>Great Minds Robotics 2018 to 2020</strong></li>
     <li>Private education for children aging from elementary to high school</li>
     <li>Applied use of NXT Lego Mindstorms to create tangible demonstrations of computer coding to improve absorption and understanding of concepts</li>
     <li>Developed a physics engine computer program to adapt to a teaching curriculum in order to teach students more about the underlying physics of games</li>
