--- a/pages/experience.html
+++ b/pages/experience.html
@@ -7,7 +7,7 @@ layout: page
   <h2> Physics Professor</h2>
   <ul>
     <li><strong>Community College of Denver 2021 to Present</strong></li>
-    <li>Calculus based general mechanics & Electromagnetism</li>
+    <li>Calculus based general mechanics & electromagnetism</li>
     <li>Develop lessons for both in class and online teaching</li>
     <li>Record conceptual videos for supplemental lecture material to introduce and expand on concepts</li>
   </ul>
