--- a/pages/publications.html
+++ b/pages/publications.html
@@ -3,4 +3,15 @@ layout: page
 ---
 
 <h1>Publications</h1>
+
+<strong>Abstract></strong>
+A density functional theory-based method is developed to describe the static and dynamic response of superfluid helium at finite temperatures.
+The model relies on the well-established 0 K Orsay–Trento functional, which has been extensively used to study the response of bulk
+superfluid helium as well as superfluid helium droplets. By including a phenomenological stochastic term in this model, it is possible to obtain
+thermodynamic equilibrium corresponding to a given temperature by propagating the system in imaginary time. The temperature dependence
+of thermodynamic quantities, such as the internal energy and entropy, is computed and is compared well with experimental reference
+data for the bulk liquid up to about 2 K, but begins to gradually deviate above that temperature. Inspection of pseudovorticity during real-time
+evolution of the system near 2 K reveals the presence of roton quasiparticles, which are suggested to be precursors for quantized vortex rings
+(Onsager’s ghosts), as well as weaker analogs of extended vortex loops.
+
 A. Long and J. Eloranta, "Density Functional theory of superfluid helium at finite temperature.", J. Chem. Phys. 155, 074102 (2021)<br> <a href="https://aip.scitation.org/doi/10.1063/5.0060132">Link to Paper</a>
