--- a/pages/publications.html
+++ b/pages/publications.html
@@ -4,7 +4,7 @@ layout: page
 
 <h1>Publications</h1>
 
-<strong>Abstract></strong>
+<strong>Abstract</strong><br>
 A density functional theory-based method is developed to describe the static and dynamic response of superfluid helium at finite temperatures.
 The model relies on the well-established 0 K Orsay–Trento functional, which has been extensively used to study the response of bulk
 superfluid helium as well as superfluid helium droplets. By including a phenomenological stochastic term in this model, it is possible to obtain
